--- a/AMTS/AMTS.csproj
+++ b/AMTS/AMTS.csproj
@@ -193,6 +193,9 @@
     <Compile Include="WynikiForm.Designer.cs">
       <DependentUpon>WynikiForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AbstractForm.resx">
+      <DependentUpon>AbstractForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ChooseServer.resx">
       <DependentUpon>ChooseServer.cs</DependentUpon>
     </EmbeddedResource>
@@ -263,6 +266,7 @@
     <None Include="AMTSDataSet.xss">
       <DependentUpon>AMTSDataSet.xsd</DependentUpon>
     </None>
+    <None Include="Data\MyriadPro.ttf" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -289,10 +293,9 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Data\" />
-  </ItemGroup>
-  <ItemGroup>
+    <None Include="Resources\MyriadPro.ttf" />
     <None Include="Resources\newMailImage.png" />
     <None Include="Resources\greyMailImage.png" />
     <None Include="Resources\background.png" />
